fix: edit icons not displaying on mobile

--- a/src/components/TodoItem/ItemEditing/ItemEdit.css
+++ b/src/components/TodoItem/ItemEditing/ItemEdit.css
@@ -1,5 +1,5 @@
 .edit__container {
-  flex: 1 0 auto;
+  flex: 1 1 auto;
   display: flex;
   gap: 2rem;
 }
@@ -27,6 +27,7 @@
 
 .edit__icon-button {
   padding: 0;
+  display: inline;
   width: 2.4rem;
   height: 2.4rem;
   background-color: transparent;
